# Dextyh

./: README.md
FlappyBird/: CMakeLists.txt  background.cpp  background.h  bird.cpp  bird.h  game.h  main.cpp  menu.cpp  menu.h  pipe.cpp  pipe.h  random.cpp  random.h  resources.cpp  resources.h
Game/: CMakeLists.txt  area.cpp  area.h  boss.cpp  boss.h  character.cpp  character.h  game.h  hero.cpp  hero.h  main.cpp  menu.cpp  menu.h  resources.cpp  resources.h  skeleton.cpp  skeleton.h
Game/cmake/: FindSDL2_ttf.cmake
OpenCV/Angle/: CMakeLists.txt  main.cpp
OpenCV/Computer_Vision/: main.cpp
OpenCV/Computer_Vision/files/: CMakeLists.txt  Detect_Circles.cpp  Detect_Circles.h
OpenCV/Computer_Vision/gtest/: CMakeLists.txt  unit_test.cpp
Practice/Car/: CMakeLists.txt  car.cpp  car.h  carpark.cpp  carpark.h  main.cpp
Practice/Unique/: main.cpp
Practice/WriteMultiplateLines/: main.cpp
Wanderer/: CMakeLists.txt  main.cpp
Week-01/Day-01/Directory4/: file.txt
Week-01/Day-02/1. HelloMe/: main.cpp
Week-01/Day-02/12. Cuboid/: main.cpp
Week-01/Day-02/14. HelloUser/: main.cpp
Week-01/Day-02/16. AnimalsAndLegs/: main.cpp
Week-01/Day-02/17. AverageOfInput/: main.cpp
Week-01/Day-02/20. PrintBigger/: main.cpp
Week-01/Day-02/22. ConditionalVariableMutation/: main.cpp
Week-01/Day-02/24. PrintEven/: main.cpp
Week-01/Day-02/26. CountFromTo/: main.cpp
Week-01/Day-02/27. FizzBuzz/: main.cpp
Week-01/Day-02/3. HelloOthers/: main.cpp
Week-01/Day-02/34. ParametricAverage/: main.cpp
Week-01/Day-02/4. IntroduceYourself/: main.cpp
Week-01/Day-02/5. TwoNumbers/: main.cpp
Week-01/Day-02/6. CodingHours/: main.cpp
Week-07/Day-01/Wanderer/: CMakeLists.txt  main.c  menu.h  resources.h
Week-08/Day-01/PokerWin/poker_test/: CMakeLists.txt  pokertest.cpp
(+320 files in other folders)
